# json-rpc-server

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  json.gdl  json_ast.h  json_ast_actions.c  json_ast_actions.h  main.c  server.c  server.h  utils.c  utils.h
